--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx ts-node src/main.ts",
-    "test": "npx jest"
+    "test": "npx jest",
+    "migrate": "npx ts-node create_database.ts"
   },
   "keywords": [],
   "author": "",
